--- a/index.html
+++ b/index.html
@@ -2,13 +2,29 @@
 <html class="no-js" lang="en">
 
 <head>
-    <title>Bưởi - Tận hưởng hương vị thơm ngon</title>
+    <title>Bưởi Tân Triều - Bưởi Ngon, Tươi, Chất Lượng Cao Mua Online</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="ThemeZaa">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="description"
-        content="Elevate your online presence with Crafto - a modern, versatile, multipurpose Bootstrap 5 responsive HTML5, SCSS template using highly creative 52+ ready demos.">
+        content="Mua bưởi Tân Triều tươi ngon, chất lượng cao từ nông sản Việt Nam. Giao hàng tận nơi, đảm bảo sự hài lòng 100%. Liên hệ ngay để đặt hàng!">
+    <meta name="keywords"
+        content="bưởi Tân Triều, bưởi ngon, bưởi tươi, bưởi chất lượng cao, bưởi Việt Nam, bưởi đặc sản, bưởi online, mua bưởi Tân Triều, bưởi tươi ngon, bưởi giao tận nơi, bưởi giá rẻ, bưởi ngon chất lượng, Tân Triều grapefruit, buy Tan Trieu grapefruit, fresh grapefruit, quality grapefruit, Vietnamese grapefruit, fresh fruit online, Tan Trieu citrus, fresh fruit delivery, buy grapefruit online, bưởi Biên Hòa, bưởi Đồng Nai, Biên Hòa grapefruit, Đồng Nai grapefruit, bưởi Biên Hòa tươi, bưởi Đồng Nai tươi ngon, bưởi đặc sản Biên Hòa, bưởi Đồng Nai chất lượng cao">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Bưởi Tân Triều - Bưởi Ngon, Tươi, Chất Lượng Cao Mua Online">
+    <meta property="og:description"
+        content="Mua bưởi Tân Triều tươi ngon, chất lượng cao từ nông sản Việt Nam. Giao hàng tận nơi, đảm bảo sự hài lòng 100%. Liên hệ ngay để đặt hàng!">
+    <meta property="og:image" content="URL_of_the_image.jpg">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bưởi Tân Triều - Bưởi Ngon, Tươi, Chất Lượng Cao Mua Online">
+    <meta name="twitter:description"
+        content="Mua bưởi Tân Triều tươi ngon, chất lượng cao từ nông sản Việt Nam. Giao hàng tận nơi, đảm bảo sự hài lòng 100%. Liên hệ ngay để đặt hàng!">
+    <meta name="twitter:image" content="URL_of_the_image.jpg">
+    <meta name="author" content="Thanh Phong">
+
     <!-- favicon icon -->
     <link rel="shortcut icon" href="images/favicon.png">
     <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
