--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         content="Mua bưởi Tân Triều tươi ngon, chất lượng cao từ nông sản Việt Nam. Giao hàng tận nơi, đảm bảo sự hài lòng 100%. Liên hệ ngay để đặt hàng!">
     <meta name="twitter:image" content="URL_of_the_image.jpg">
     <meta name="author" content="Thanh Phong">
+    <meta name="google-site-verification" content="htoXTtpWRFpJgjAiTosTQBurEmR08eZRCT2oJ99gL4s" />
 
     <!-- favicon icon -->
     <link rel="shortcut icon" href="images/favicon.png">
@@ -55,13 +56,13 @@
         <nav class="navbar navbar-expand-lg header-transparent bg-transparent header-reverse" data-header-hover="light">
             <div class="container-fluid">
                 <div class="col-auto col-lg-2 me-lg-0 me-auto">
-                    <a class="navbar-brand" href="demo-restaurant.html">
-                        <img src="images/luonggia-logo-white.png"
-                            data-at2x="images/luonggia-logo-white@2x.png" alt="" class="default-logo">
-                        <img src="images/luonggia-logo-black.png"
-                            data-at2x="images/luonggia-logo-black@2x.png" alt="" class="alt-logo">
-                        <img src="images/luonggia-logo-black.png"
-                            data-at2x="images/luonggia-logo-black@2x.png" alt="" class="mobile-logo">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="images/luonggia-logo-white.png" data-at2x="images/luonggia-logo-white@2x.png" alt=""
+                            class="default-logo">
+                        <img src="images/luonggia-logo-black.png" data-at2x="images/luonggia-logo-black@2x.png" alt=""
+                            class="alt-logo">
+                        <img src="images/luonggia-logo-black.png" data-at2x="images/luonggia-logo-black@2x.png" alt=""
+                            class="mobile-logo">
                     </a>
                 </div>
                 <div class="col-auto menu-order position-static">
@@ -74,7 +75,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav alt-font ls-1px">
-                            <li class="nav-item"><a href="demo-restaurant.html" class="nav-link">Home</a></li>
+                            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                             <li class="nav-item"><a href="demo-restaurant-about.html" class="nav-link">About</a></li>
                             <li class="nav-item"><a href="demo-restaurant-menu.html" class="nav-link">Menu</a></li>
                             <li class="nav-item"><a href="demo-restaurant-story.html" class="nav-link">Story</a></li>
@@ -191,10 +192,12 @@
                             class="feature-box-icon feature-box-icon-rounded w-100px h-100px rounded-circle bg-white box-shadow-medium-bottom me-25px">
                             <i class="bi bi-box-seam d-inline-block icon-medium text-dark-gray"></i>
                         </div>
-                        <div class="feature-box-content last-paragraph-no-margin">
-                            <span class="d-inline-block alt-font fs-26 text-dark-gray">fast delivery</span>
-                            <p class="lh-22">Within 30 minutes</p>
-                        </div>
+                        <a href="#">
+                            <div class="feature-box-content last-paragraph-no-margin">
+                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Lịch sử đảng</span>
+                                <p class="lh-22">Within 30 minutes</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <!-- end features box item -->
@@ -1365,9 +1368,9 @@
                                 class="text-decoration-line-bottom text-dark-gray fw-600">Crafto</a></p>
                     </div>
                     <div class="col-md-4 text-center order-1 order-md-2 sm-mb-20px">
-                        <a href="demo-restaurant.html" class="footer-logo d-inline-block">
-                            <img src="images/luonggia-logo-black.png"
-                                data-at2x="images/luonggia-logo-black@2x.png" alt="" class="default-logo">
+                        <a href="index.html" class="footer-logo d-inline-block">
+                            <img src="images/luonggia-logo-black.png" data-at2x="images/luonggia-logo-black@2x.png"
+                                alt="" class="default-logo">
                         </a>
                     </div>
                     <div
