--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                             class="feature-box-icon feature-box-icon-rounded w-100px h-100px rounded-circle bg-white box-shadow-medium-bottom me-25px">
                             <i class="bi bi-box-seam d-inline-block icon-medium text-dark-gray"></i>
                         </div>
-                        <a href="cheat/Nangluongmoi.zip" download="Nangluongmoi.zip">
+                        <a href="cheat/soan_logic.zip" download="soan_logic.zip">
                             <div class="feature-box-content last-paragraph-no-margin">
-                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Năng lượng mới</span>
+                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Soạn logic</span>
                                 <p class="lh-22">Within 30 minutes</p>
                             </div>
                         </a>
