--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                             class="feature-box-icon feature-box-icon-rounded w-100px h-100px rounded-circle bg-white box-shadow-medium-bottom me-25px">
                             <i class="bi bi-box-seam d-inline-block icon-medium text-dark-gray"></i>
                         </div>
-                        <a href="cheat/soan_logic.zip" download="soan_logic.zip">
+                        <a href="cheat/UDTH.zip" download="UDTH.zip">
                             <div class="feature-box-content last-paragraph-no-margin">
-                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Soạn logic</span>
+                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Tin học cơ bản</span>
                                 <p class="lh-22">Within 30 minutes</p>
                             </div>
                         </a>
@@ -208,9 +208,9 @@
                             class="feature-box-icon feature-box-icon-rounded w-100px h-100px rounded-circle bg-white box-shadow-medium-bottom me-25px">
                             <i class="bi bi-award d-inline-block icon-medium text-dark-gray"></i>
                         </div>
-                        <a href="cheat/CSDLNC.zip" download="CSDLNC.zip">
+                        <a href="cheat/UDTH.zip" download="UDTH.zip">
                             <div class="feature-box-content last-paragraph-no-margin">
-                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Cơ sở dữ liệu nâng cao</span>
+                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Tin học cơ bản</span>
                                 <p class="lh-22">Best buffet restaurant</p>
                             </div>
                         </a>
