--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         </div>
                         <a href="cheat/On_tap.zip" download="On_tap.zip">
                             <div class="feature-box-content last-paragraph-no-margin">
-                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Tin học cơ bản</span>
+                                <span class="d-inline-block alt-font fs-26 text-dark-gray">Ôn tập</span>
                                 <p class="lh-22">Best buffet restaurant</p>
                             </div>
                         </a>
